--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
+                          startAddy = JSON.stringify(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //document.getElementById('test').innerHTML = startAddy;
-                          startOutput = JSON.stringify(startAddy)
+                          //startOutput = JSON.stringify(startAddy)
                         })
                         .catch(function(error){
                           console.log(error);
@@ -261,7 +261,7 @@
                         });
                       }
                       //var route = startOutput + endOutput;
-                      document.getElementById('test').innerHTML = startOutput;
+                      document.getElementById('test').innerHTML = startAddy;
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
