--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          startAddy = JSON.stringify(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
+                          startAddy = toString(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //document.getElementById('test').innerHTML = startAddy;
