--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          startAddy = response.data.results[0].address_components[0].getString("short_name");
+                          startAddy = response.data.results[0].address_components[0].toString();
                           //startAddy = JSON.stringify(response.data.results[0].address_components[0].short_name) + " " + JSON.stringify(response.data.results[0].address_components[1].short_name);
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
