--- a/index.html
+++ b/index.html
@@ -221,9 +221,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          startAddy = response.data.results[0].address_components[0];
-                          startOutput = JSON.stringify(startAddy);
-                          //startAddy = JSON.stringify(response.data.results[0].address_components[0].short_name) + " " + JSON.stringify(response.data.results[0].address_components[1].short_name);
+                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //document.getElementById('test').innerHTML = startAddy;
@@ -253,17 +251,14 @@
                           //formatted address
                           endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
-                          console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
-                          endOutput = `
-                            <p>${endAddy}</p>
-                          `;
+                          console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);                    
                         })
                         .catch(function(error){
                           console.log(error);
                         });
                       }
                       //var route = startOutput + endOutput;
-                      document.getElementById('test').innerHTML = startOutput;
+                      document.getElementById('test').innerHTML = startAddy + endAddy;
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
