--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                           //console.log(response);
                           //formatted address
                           startAddy = JSON.stringify(response.data.results[0].address_components[0]);
+                          console.log(startAddy);
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
