--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                           //console.log(response);
                           //formatted address
                           startAddy = JSON.stringify(response.data.results[0].address_components[0].short_name);
+                          startOutput = "" + startAddy;
                           console.log(startAddy);
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
@@ -260,7 +261,7 @@
                         });
                       }
                       //var route = startOutput + endOutput;
-                      document.getElementById('test').innerHTML = startAddy;
+                      document.getElementById('test').innerHTML = startOutput;
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
