--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                         .then(function(response){
                           //console.log(response);
                           //formatted address
-                          startAddy = JSON.stringify(response.data.results[0].address_components[0].short_name);
-                          startOutput = "" + startAddy;
+                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;                  
                           console.log(startAddy);
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
@@ -261,7 +260,7 @@
                         });
                       }
                       //var route = startOutput + endOutput;
-                      document.getElementById('test').innerHTML = startOutput;
+                      document.getElementById('test').innerHTML = startAddy;
                     }
                     /*function getGeocode(coord){
                       //START GEOCODE
