--- a/index.html
+++ b/index.html
@@ -222,12 +222,10 @@
                           //console.log(response);
                           //formatted address
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;       
-                          startAddy = response.data.results[0].address_components[0];
+                          startAddy = response.data.results[0].address_components[0].short_name;
                           console.log(startAddy);
                           startOutput = `
-                            <ul>
-                              <li>${startAddy}</li>
-                            </ul>
+                            <h1>${startAddy}</h1>
                           `;
                           document.getElementById('test').innerHTML = startOutput;
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
