--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
                           //console.log(response);
                           //formatted address
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;       
-                          startAddy = response.data.results[0].address_components[0].short_name;
+                          startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           console.log(startAddy);
                           startOutput = `
-                            <h1>${startAddy}</h1>
+                            <p>${startAddy}</p>
                           `;
                           document.getElementById('test').innerHTML = startOutput;
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
