--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                           startOutput = `
                             <p>${startAddy}</p>
                           `;
-                          document.getElementById('test').innerHTML = startOutput;
+                          //document.getElementById('test').innerHTML = startOutput;
+                          
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           //document.getElementById('test').innerHTML = startAddy;
@@ -237,7 +238,7 @@
                           console.log(error);
                         });
                       }
-                        
+                      document.getElementById('test').innerHTML = startOutput;
                       //END INPUT
                       if(end.charAt(0) == '{' || end.charAt(0) == '4'){
                         const latlngEnd = end.split(",",2);
