--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                           startOutput = `
                             <p>${startAddy}</p>
                           `;
-                          //document.getElementById('test').innerHTML = startOutput;
+                          document.getElementById('test').innerHTML = startOutput;
                           
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
@@ -238,7 +238,7 @@
                           console.log(error);
                         });
                       }
-                      document.getElementById('test').innerHTML = startOutput;
+
                       //END INPUT
                       if(end.charAt(0) == '{' || end.charAt(0) == '4'){
                         const latlngEnd = end.split(",",2);
@@ -258,7 +258,11 @@
                           //formatted address
                           endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
-                          console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);                    
+                          console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);  
+                          endOutput = `
+                            <p>${endAddy}</p>
+                          `;
+                          document.getElementById('test').innerHTML = endOutput;
                         })
                         .catch(function(error){
                           console.log(error);
