--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                           endOutput = `
                             <p>${endAddy}</p>
                           `;
-                          document.getElementById('test').innerHTML = endOutput;
+                          document.getElementById('test2').innerHTML = endOutput;
                         })
                         .catch(function(error){
                           console.log(error);
@@ -314,6 +314,7 @@
 
               <!-- TESTING DHMAP ADDRESS ARRAY -->
               <p id="test"></p>
+              <p id="test2"></p>
               <script src="DHMap.js"> </script>
  
             </article>
