--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
               <div id="map" style="width:100%;height:400px;"></div>
 
               <!-- TESTING DHMAP ADDRESS ARRAY -->
-              <h2>Start:&nbsp;</h2>
-              <p id="test"></p>
-              <h2>End:&nbsp;</h2>
-              <p id="test2"></p>
+              <label>Start:&nbsp;</label>
+              <label id="test"></label>
+              <label>End:&nbsp;</label>
+              <label id="test2"></label>
               <script src="DHMap.js"> </script>
  
             </article>
