--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                           console.log(error);
                         });
                       }      
-                  
+                        start = document.getElementById("test").value;
+                        end = document.getElementById("test2").value;
                         //Searches for valid street
                         var findS = searchAddress(start);
                         var findE = searchAddress(end);
