--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                       else if(start.charAt(0) == '{' || start.charAt(0) == '4' && end.charAt(0) != '{' && end.charAt(0) != '4') document.getElementById('test2').innerHTML = end;
                       else{
                         document.getElementById('test').innerHTML = start;
-                        document.getElementById('test2').innerHTML = start;
+                        document.getElementById('test2').innerHTML = end;
                       }
                         var checkStart = document.getElementById("test").value;
                         var checkEnd = document.getElementById("test2").value;
