--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
                         document.getElementById('test').innerHTML = start;
                         document.getElementById('test2').innerHTML = end;
                       }
-                        checkStart = document.getElementById("test").value;
-                        checkEnd = document.getElementById("test2").value;
+                        checkStart = document.getElementById("test");
+                        checkEnd = document.getElementById("test2");
                         //Searches for valid street
-                        var findS = searchAddress(checkStart);
-                        var findE = searchAddress(checkEnd);
+                        var findS = searchAddress(checkStart.outerHTML);
+                        var findE = searchAddress(checkEnd.outerHTML);
                         //NEED TO CONVERT INTERSECTIONS[] ID TO FULL BLOCK ST NAME
                       
                         if(findS === undefined && findE === undefined)alert("Starting and Ending locations are not found or within range.");
