--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         //Searches for valid street
                         var temp = checkStart.outerHTML;
                         console.log(temp);
-                        var street = temp.substring(17,s.length-9);
+                        var street = temp.substring(17,temp.length-9);
                         console.log("UPDATE " + street)
                         var findS = searchAddress(checkStart.outerHTML);
                         var findE = searchAddress(checkEnd.outerHTML);
