--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                           //formatted address
                           endAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
-                          console.log(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);  
+                          console.log(endAddy);  
                           endOutput = `${endAddy}`;
                           document.getElementById('test2').innerHTML = endOutput;
                         })
@@ -272,8 +272,8 @@
                         //Searches for valid street
                         var temp = checkStart.outerHTML;
                         var temp2 = checkEnd.outerHTML;
-                        console.log(temp);
-                        console.log(temp2);
+                        console.log("TEST " + temp);
+                        console.log("TEST2 " + temp2);
                         var st1 = temp.substring(17,temp.length-8);
                         var st2 = temp2.substring(18,temp.length-7);
                         console.log("UPDATE " + st1);
