--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                       }   
                       if(start.charAt(0) != '{' && start.charAt(0) != '4' && end.charAt(0) == '{' || end.charAt(0) == '4') document.getElementById('test').innerHTML = start;
                       else if(start.charAt(0) == '{' || start.charAt(0) == '4' && end.charAt(0) != '{' && end.charAt(0) != '4') document.getElementById('test2').innerHTML = end;
-                      else{
+                      else if(start.charAt(0) != '{' || start.charAt(0) != '4' && end.charAt(0) != '{' && end.charAt(0) != '4'){
                         document.getElementById('test').innerHTML = start;
                         document.getElementById('test2').innerHTML = end;
-                      }
+                      }                    
                         checkStart = document.getElementById("test");
                         checkEnd = document.getElementById("test2");
                         //Searches for valid street
