--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
                       else if(start.charAt(0) != '{' || start.charAt(0) != '4' && end.charAt(0) != '{' && end.charAt(0) != '4'){
                         document.getElementById('test').innerHTML = start;
                         document.getElementById('test2').innerHTML = end;
-                      }                    
+                      } 
+                        setTimeout(2000);
                         checkStart = document.getElementById("test");
                         checkEnd = document.getElementById("test2");
                         //Searches for valid street
