--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                         document.getElementById('test2').innerHTML = end;
                       }     
                       //alert(start + ' ' + end);
+                      checkAddress();
                     }
                   </script>
 
