--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                           startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           console.log("Found Start LatLng :" + startAddy);
                           startOutput = `${startAddy} `;
-                          document.getElementById('test').innerHTML = startOutput;
+                          //document.getElementById('test').innerHTML = startOutput;
 
                           //startAddy = response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name;
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
@@ -255,18 +255,18 @@
                           //alert(response.data.results[0].address_components[0].short_name + " " + response.data.results[0].address_components[1].short_name);
                           console.log("Found End LatLng :" + endAddy);  
                           endOutput = `${endAddy}`;
-                          document.getElementById('test2').innerHTML = endOutput;
+                          //document.getElementById('test2').innerHTML = endOutput;
 
                         })
                         .catch(function(error){
                           console.log(error);
                         });
                       }   
-                      if(start.charAt(0) != '{' && end.charAt(0) == '{') document.getElementById('test').innerHTML = start;
-                      else if(start.charAt(0) == '{' && end.charAt(0) != '{') document.getElementById('test2').innerHTML = end;
+                      if(start.charAt(0) != '{' && end.charAt(0) == '{') startOutput = `${start}`;
+                      else if(start.charAt(0) == '{' && end.charAt(0) != '{') endOutput = `${end}`;
                       else if(start.charAt(0) != '{' && end.charAt(0) != '{'){
-                        document.getElementById('test').innerHTML = start;
-                        document.getElementById('test2').innerHTML = end;
+                        startOutput = `${start}`;
+                        endOutput = `${end}`;
                       }     
                       //alert(start + ' ' + end);
                       checkAddress();
@@ -275,19 +275,19 @@
                   
                 <script>
                   function checkAddress(){
-                    checkStart = document.getElementById("test");
-                    checkEnd = document.getElementById("test2");
+                    checkStart = startOutput;
+                    checkEnd = endOutput;
                     //Searches for valid street
-                    var temp = checkStart.outerHTML;
-                    var temp2 = checkEnd.outerHTML;
-                    console.log("TEST " + temp);
-                    console.log("TEST2 " + temp2);
-                    var st1 = temp.substring(17,temp.length-8);
+                    //var temp = checkStart.outerHTML;
+                    //var temp2 = checkEnd.outerHTML;
+                    console.log("TEST " + checkStart);
+                    console.log("TEST2 " + checkEnd);
+                   /* var st1 = temp.substring(17,temp.length-8);
                     var st2 = temp2.substring(18,temp.length-7);
                     console.log("UPDATE " + st1);
-                    console.log("UPDATE " + st2);
-                    var findS = searchAddress(st1);
-                    var findE = searchAddress(st2);
+                    console.log("UPDATE " + st2);*/
+                    var findS = searchAddress(checkStart);
+                    var findE = searchAddress(checkEnd);
                     //NEED TO CONVERT INTERSECTIONS[] ID TO FULL BLOCK ST NAME
                       
                     if(findS === undefined && findE === undefined)alert("Starting and Ending locations are not found or within range.");
