--- a/index.html
+++ b/index.html
@@ -262,15 +262,17 @@
                         document.getElementById('test2').innerHTML = end;
                       }     
                       //alert(start + ' ' + end);
-                      //checkAddress();
+                      checkAddress();
                     }
                   </script>
                   
                 <script>
                   function checkAddress(){
                     //Searches for valid street
-                    var temp = startOutput.outerHTML;
-                    var temp2 = endOutput.outerHTML;
+                    checkStart = document.getElementById('test').value;
+                    checkEnd = document.getElementById('test2').value;
+                    var temp = checkStart.outerHTML;
+                    var temp2 = checkEnd.outerHTML;
                     console.log("TEST " + temp);
                     console.log("TEST2 " + temp2);
                     var st1 = temp.substring(17,temp.length-8);
