--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                 <script>
                   function checkAddress(){
                     //Searches for valid street
-                    checkStart = document.getElementById('test').value;
-                    checkEnd = document.getElementById('test2').value;
+                    checkStart = document.getElementById('test');
+                    checkEnd = document.getElementById('test2');
                     var temp = checkStart.outerHTML;
                     var temp2 = checkEnd.outerHTML;
                     console.log("TEST " + temp);
