--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                       }     
                       //alert(start + ' ' + end);
                       checkAddress();
+                      return;
                     }
                   </script>
                   
