--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                     else if(findS == undefined)alert("Starting location is not found or within range");
                     else if(findE == undefined)alert("Ending location is not found or within range");
                     else alert(findS + ' ' + findE);
+                    return;
                   }
                 </script>
             
