--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     if(findS === undefined && findE === undefined)alert("Starting and Ending locations are not found or within range.");
                     else if(findS == undefined)alert("Starting location is not found or within range");
                     else if(findE == undefined)alert("Ending location is not found or within range");
-                    else alert(findS + ' ' + findE);
+                    //else alert(findS + ' ' + findE);
                     return;
                   }
                 </script>
